# pmgfal

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  bench.py  justfile  pyproject.toml
.github/workflows/: ci.yml  publish.yml
python/pmgfal/: __init__.py  _pmgfal.pyi
scripts/: bench.py
src/: builtin.rs  codegen.rs  lib.rs  parser.rs  types.rs
tests/: __init__.py  test_generate.py  test_git_providers.py
