[package]
name = "pmgfal"
version = "0.0.0" # set dynamically from git tag in CI
edition = "2021"
license = "MIT"
description = "pydantic model generator for atproto lexicons"

[lib]
name = "pmgfal"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.26", features = ["extension-module"] }
atrium-lex = { git = "https://github.com/atrium-rs/atrium", branch = "main" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
heck = "0.5"
thiserror = "2.0"

[profile.release]
lto = true
codegen-units = 1
strip = true
